Fix scrolling on mobile

--- a/src/layouts/PageLayout/styles.module.scss
+++ b/src/layouts/PageLayout/styles.module.scss
@@ -6,6 +6,7 @@
   flex-direction: column;
   gap: rem(12px);
   height: 100%;
+  overflow: auto;
 
   @include minWidth(desktop) {
     gap: rem(32px);
@@ -13,7 +14,7 @@
 }
 
 .Content {
-  flex-shrink: 1;
+  flex-shrink: 0;
   display: flex;
   flex-direction: column;
   overflow: hidden;
